--- a/development/edge-software.html
+++ b/development/edge-software.html
@@ -40,7 +40,7 @@
            <div id="collapseEleven" class="panel-collapse collapse in" aria-expanded="true">
             <div class="panel-body">
               <p>The EDGE Recorders will connect to your existing press box and end zone cameras with an HDMI cable. All you need is a high definition camcorder with an HDMI out port.</p> 
-              <div class="switch-image">
+              <div class="switch-image-right">
                 <img src="./img/edge/1.jpg" alt="" >
               </div>
             </div>
@@ -60,7 +60,7 @@
           <div id="collapseTwelve" class="panel-collapse collapse">
             <div class="panel-body">
               <p>The EGDE iPad app allows one operator to start and stop the recording of multiple cameras at the same time giving you the same number of clips from each camera angle.  All your camera operators have to do is point and zoom the cameras.</p> 
-              <div class="switch-image">
+              <div class="switch-image-right">
                 <img src="./img/edge/2.jpg" alt="" >
               </div>            
             </div>
@@ -78,7 +78,7 @@
           <div id="collapseThirteen" class="panel-collapse collapse">
             <div class="panel-body">
               <p>After a play is captured by the EDGE Recorder, the play will automatically be sent to every iPad connected to the EDGE Network. Once the play is downloaded to your iPad, you will be able to replay that clip over and over.</p> 
-              <div class="switch-image">
+              <div class="switch-image-right">
                 <img src="./img/edge/3.jpg" alt="" >
               </div>
             </div>
@@ -96,7 +96,7 @@
           <div id="collapseFourteen" class="panel-collapse collapse">
             <div class="panel-body">
               <p>After the game is finished and you have an internet connection, upload your video clips and ODK from each angle to Hudl. Since EDGE Replay syncs all angles, your intercut will be extremely easy.</p> 
-              <div class="switch-image">
+              <div class="switch-image-right">
                 <img src="./img/edge/4.jpg" alt="" >
               </div>
             </div>
