--- a/development/edge-software.html
+++ b/development/edge-software.html
@@ -27,7 +27,7 @@
   <div class="container-fluid">
     <div class="row roomy switch-container">
 
-        <div class="panel-group switch-container" id="accordion">
+        <div class="panel-group" id="accordion">
           <div class="panel panel-default edge-panel roomy">
             <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseEleven" aria-expanded="true">
               <div class="panel-heading">
