--- a/development/blog.html
+++ b/development/blog.html
@@ -6,7 +6,7 @@
 
         <div class="col-md-2"></div>
         <div class="col-md-8 blog">
-           <script type='text/javascript' src='http://sportscopevideo.tumblr.com/js'></script>
+           <script type='text/javascript' src='http://sportscopevideo.tumblr.com/js?start=0&num=5'></script>
         </div>
     </div>
 
