--- a/blog-post.html
+++ b/blog-post.html
@@ -134,7 +134,7 @@
                 <a href="faq.html">FAQ</a>
               </li>
               <li>
-                <a href="blog.html">Blog</a>
+                <a href="blog-home-2.html">Blog</a>
               </li>
               <li><a href="sports.html">Sports</a></li>
             </ul>
@@ -155,24 +155,8 @@
     <!-- Page Content -->
     <div class="container">
 
-        <!-- Page Heading/Breadcrumbs -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">Blog Post
-                    <small>by <a href="#">Start Bootstrap</a>
-                    </small>
-                </h1>
-                <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a>
-                    </li>
-                    <li class="active">Blog Post</li>
-                </ol>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <!-- Content Row -->
-        <div class="row">
+        <div class="row first-row">
+            
 
             <!-- Blog Post Content Column -->
             <div class="col-lg-8">
@@ -311,7 +295,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, perspiciatis adipisci accusamus laudantium odit aliquam repellat tempore quos aspernatur vero.</p>
                 </div>
 
-            </div>
+            </div> 
 
         </div>
         <!-- /.row -->
