--- a/blog.html
+++ b/blog.html
@@ -134,7 +134,7 @@
                 <a href="faq.html">FAQ</a>
               </li>
               <li>
-                <a href="blog.html">Blog</a>
+                <a href="blog-home-2.html">Blog</a>
               </li>
               <li><a href="sports.html">Sports</a></li>
             </ul>
@@ -158,7 +158,7 @@
 
         <div class="col-md-2"></div>
         <div class="col-md-8 blog">
-           <script type='text/javascript' src='http://sportscopevideo.tumblr.com/js'></script>
+           <script type='text/javascript' src='http://sportscopevideo.tumblr.com/js?start=0&num=5'></script>
         </div>
     </div>
 
