--- a/sports.html
+++ b/sports.html
@@ -134,7 +134,7 @@
                 <a href="faq.html">FAQ</a>
               </li>
               <li>
-                <a href="blog.html">Blog</a>
+                <a href="blog-home-2.html">Blog</a>
               </li>
               <li><a href="sports.html">Sports</a></li>
             </ul>
